Configured JWT authentication for api requests andswagger configurations for the same
