# docs/swagger.json
@@ -18,8 +18,75 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "performs user authentication and returns JWT Auth token on success",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User Login",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Register new user for inference",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Create new user",
+                "parameters": [
+                    {
+                        "description": "Create User",
+                        "name": "User",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UserCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                }
+            }
+        },
         "/models": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find all AI Models subscribed to the ginference-server",
                 "consumes": [
                     "application/json"
@@ -46,6 +113,11 @@
         },
         "/models/create": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Subscribe new AIModel for inference",
                 "consumes": [
                     "application/json"
@@ -80,6 +152,11 @@
         },
         "/models/edit": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update a subscribed AIModel's details",
                 "consumes": [
                     "application/json"
@@ -114,6 +191,11 @@
         },
         "/models/id/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find an AI Model using the given modelID",
                 "consumes": [
                     "application/json"
@@ -148,6 +230,11 @@
         },
         "/models/name/{name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find AI Models matching the given model name",
                 "consumes": [
                     "application/json"
@@ -185,6 +272,11 @@
         },
         "/models/username/{username}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find AI Models created by the user with the given username",
                 "consumes": [
                     "application/json"
@@ -222,6 +314,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find all users registered with the ginference-server",
                 "consumes": [
                     "application/json"
@@ -246,42 +343,13 @@
                 }
             }
         },
-        "/users/create": {
-            "post": {
-                "description": "Register new user for inference",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Create new user",
-                "parameters": [
-                    {
-                        "description": "Create User",
-                        "name": "User",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.UserCreate"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/user.User"
-                        }
-                    }
-                }
-            }
-        },
         "/users/edit": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update a registered User's details",
                 "consumes": [
                     "application/json"
@@ -316,6 +384,11 @@
         },
         "/users/id/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find the user created with the given ID",
                 "consumes": [
                     "application/json"
@@ -350,6 +423,11 @@
         },
         "/users/name/{name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find the users created with the given name",
                 "consumes": [
                     "application/json"
@@ -387,6 +465,11 @@
         },
         "/users/username/{username}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find the user created with the given username",
                 "consumes": [
                     "application/json"
@@ -537,6 +620,7 @@
                 "emailID",
                 "firstName",
                 "lastName",
+                "password",
                 "phone",
                 "userName"
             ],
@@ -556,6 +640,11 @@
                     "type": "string",
                     "maxLength": 18,
                     "minLength": 2
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 18,
+                    "minLength": 8
                 },
                 "phone": {
                     "type": "string"
@@ -604,6 +693,12 @@
         }
     },
     "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "\"Type 'Bearer TOKEN' to correctly set the API Key\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
         "BasicAuth": {
             "type": "basic"
         }
