# routes/routes.go
@@ -1,9 +1,10 @@
 package routes
 
 import (
+	"example/ginference-server/controllers/authcontroller"
+	"example/ginference-server/controllers/modelcontroller"
+	"example/ginference-server/controllers/usercontroller"
 	"example/ginference-server/middlewares"
-	"example/ginference-server/routes/modelroutes"
-	"example/ginference-server/routes/userroutes"
 
 	docs "example/ginference-server/docs"
 
@@ -17,27 +18,31 @@ func Init() *gin.Engine {
 
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	v1 := router.Group("/api/v1")
+	auth := v1.Group("/auth")
+	{
+		auth.POST("/register", authcontroller.Register)
+		auth.GET("/login", authcontroller.Login)
+	}
 	v1.Use(middlewares.JWTAuthMiddleware())
 	{
 		// User routes '/users*'
 		usr := v1.Group("/users")
 		{
-			usr.GET("/", userroutes.GetAllUsers)
-			usr.GET("/id/:id", userroutes.GetUserByID)
-			usr.GET("/name/:name", userroutes.GetUserByName)
-			usr.GET("/username/:username", userroutes.GetUserByUserName)
-			usr.POST("/create", userroutes.CreateNewUser)
-			usr.PUT("/edit", userroutes.EditUser)
+			usr.GET("/", usercontroller.GetAllUsers)
+			usr.GET("/id/:id", usercontroller.GetUserByID)
+			usr.GET("/name/:name", usercontroller.GetUserByName)
+			usr.GET("/username/:username", usercontroller.GetUserByUserName)
+			usr.PUT("/edit", usercontroller.EditUser)
 		}
 		// Model routes '/models*'
 		mod := v1.Group("/models")
 		{
-			mod.GET("/", modelroutes.GetAllModels)
-			mod.GET("/id/:id", modelroutes.GetModelByID)
-			mod.GET("/name/:name", modelroutes.GetModelByName)
-			mod.GET("/username/:username", modelroutes.GetModelsByUsername)
-			mod.POST("/create", modelroutes.CreateNewModel)
-			mod.PUT("/edit", modelroutes.EditModel)
+			mod.GET("/", modelcontroller.GetAllModels)
+			mod.GET("/id/:id", modelcontroller.GetModelByID)
+			mod.GET("/name/:name", modelcontroller.GetModelByName)
+			mod.GET("/username/:username", modelcontroller.GetModelsByUsername)
+			mod.POST("/create", modelcontroller.CreateNewModel)
+			mod.PUT("/edit", modelcontroller.EditModel)
 		}
 	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
